Closed
Bug 1220033
Opened 5 years ago
Closed 5 years ago
Modern.ie MSE demo stalls
Categories
(Core :: Audio/Video: Playback, defect, P2)
Tracking
()
VERIFIED
FIXED
mozilla45
People
(Reporter: cpearce, Assigned: jya)
References
(Blocks 1 open bug, )
Details
(Whiteboard: [bugday-20151111])
Attachments
(2 files)
4.20 KB,
patch
|
gerald
:
review+
lizzard
:
approval-mozilla-aurora+
lizzard
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
775.34 KB,
image/png
|
Details |
Microsoft's demo at https://dev.modern.ie/testdrive/demos/eme/ stalls on the unencrypted Big Buck Bunny demo. I tested in Beta 42, Windows 7. STR: 1. Open https://dev.modern.ie/testdrive/demos/eme/ 2. Select the unencrypted Big Buck Bunny video. 3. Start it playing, and play around with the bitrate slider at the bottom, eventually playback still stall.
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → jyavenard
Assignee | ||
Comment 2•5 years ago
|
||
Attachment #8682895 -
Flags: review?(gsquelart)
Updated•5 years ago
|
Attachment #8682895 -
Flags: review?(gsquelart) → review+
Updated•5 years ago
|
Priority: -- → P2
Comment 4•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/849e4c4784ca
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Assignee | ||
Comment 6•5 years ago
|
||
Comment on attachment 8682895 [details] [diff] [review] Don't use fuzz arithmetic for calculating internal buffered ranges Approval Request Comment [Feature/regressing bug #]: 1220033 [User impact if declined]: Site using MSE may stall [Describe test coverage new/current, TreeHerder]: In central for a week [Risks and why]: Low. It's the proper thing to do. [String/UUID change made/needed]: None
Attachment #8682895 -
Flags: approval-mozilla-beta?
Attachment #8682895 -
Flags: approval-mozilla-aurora?
Comment on attachment 8682895 [details] [diff] [review] Don't use fuzz arithmetic for calculating internal buffered ranges Prevents a video hang, let's take this for aurora and beta.
Attachment #8682895 -
Flags: approval-mozilla-beta?
Attachment #8682895 -
Flags: approval-mozilla-beta+
Attachment #8682895 -
Flags: approval-mozilla-aurora?
Attachment #8682895 -
Flags: approval-mozilla-aurora+
Comment 8•5 years ago
|
||
¡Hola Jean-Yves! Ended up here from https://bugzilla.mozilla.org/show_bug.cgi?id=1219473 The steps on that bug no longer cause the playback to stop on Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:45.0) Gecko/20100101 Firefox/45.0 ID:20151110030205 CSet: cc473fe5dc512c450634506f68cbacfb40a06a23 so I'm marking this verified. There's still the error "TypeError: video.error is null" being shown at the top the page and a bit of weird artifacting on the bottom part of the video (please see bug-1219473.PNG attached). Shall I file separate bugs for these or are these known already? ¡Gracias! Alex
Flags: needinfo?(jyavenard)
Updated•5 years ago
|
Status: RESOLVED → VERIFIED
Whiteboard: [bugday-20151111]
Comment 9•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/d06197eaef02
Assignee | ||
Comment 10•5 years ago
|
||
(In reply to alex_mayorga from comment #8) > Shall I file separate bugs for these or are these known already? This is likely the same as bug 1222201, and there's another. I'll look into those shortly
Flags: needinfo?(jyavenard)
Comment 11•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/fcbbc5261056
status-firefox44:
--- → fixed
Comment 12•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/84b0b59ed1d2
status-firefox43:
--- → fixed
Comment 13•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-b2g44_v2_5/rev/fcbbc5261056
status-b2g-v2.5:
--- → fixed
Comment 14•5 years ago
|
||
Updating Fx45 flag per Comment 8. Setting [qe-verify+] for verification on 43b3.
Flags: qe-verify+
Comment 15•5 years ago
|
||
Reproduced with 43.0b2 under Windows 7 x64. Still reproducible with 43.0b3 build 2 (Build ID: 20151112144305), under Windows 7 64-bit and Windows 10x32 Browser console output: - ‘setting 'encrypted' event listener’ thrown by demo.js:451:13 - ‘Setting src: [object MediaSource]’ thrown by demo.js:412:13 Jean-Yves, any ideas why? Should I reopen this bug or file a different one?
Flags: qe-verify+ → needinfo?(jyavenard)
Assignee | ||
Comment 16•5 years ago
|
||
Only the first stream can work. The others are EME using CDM we don't support. But you're right I can reproduce it on beta and aurora too.... need to check what was uplifted and it's missing anyting
Assignee | ||
Comment 17•5 years ago
|
||
oh I see... it's the wrong patch that was uplifted. Well, right path but wrong bug number. Tomcat, it's this patch that need uplifting
Flags: needinfo?(jyavenard) → needinfo?(cbook)
Assignee | ||
Updated•5 years ago
|
This already landed on aurora in http://hg.mozilla.org/releases/mozilla-aurora/rev/d05eb25b0baa as far as I can tell.
Comment 19•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/f6fa2e5fb632
Updated•5 years ago
|
Flags: qe-verify+
Comment 20•5 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-b2g44_v2_5/rev/d05eb25b0baa
Comment 21•5 years ago
|
||
I reproduced the initial issue using an old build (Firefox 43 beta 2), verified that the issue does not reproduce anymore using Firefox 43 beta 4 and latest Firefox Developer Edition 44.0a2 on Windows 7 64-bit and Windows 10 64-bit.
Updated•5 years ago
|
Flags: qe-verify+
Updated•5 years ago
|
Flags: needinfo?(cbook)
You need to log in
before you can comment on or make changes to this bug.
Description
•